--- a/src/FlatlandApplet.html
+++ b/src/FlatlandApplet.html
@@ -1,15 +1,21 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-  <title>The Flatland Applet</title>
-</head>
-<body>
-<h1>Flatland</h1>
-The author, Duane Johnson, is a student at Brigham Young University,
-Utah.  He can be contacted at <a href="mailto:duanejohnson@byu.edu">duanejohnson@byu.edu</a>.<br>
-<br>
-<applet code="FlatlandApplet.class" width="640" height="480"
- align="middle"> 	Your browser does not support Java applets, so 	you
-can not see this applet operate. </applet> <br>
-</body>
-</html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
+<html>
+    <head>
+        <title>The Flatland Applet</title>
+    </head>
+
+    <body>
+        <h1>Flatland</h1>
+
+        The author, Duane Johnson, is a student at Brigham Young University, Utah. He can be
+        contacted at <a href="mailto:duanejohnson@byu.edu">duanejohnson@byu.edu</a>.<br />
+
+        <br />
+
+        <applet code="FlatlandApplet.class" width="640" height="480" align="middle">
+            Your browser does not support Java applets, so you can not see this applet operate.
+        </applet>
+        <br />
+    </body>
+</html>
