--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
-<head>
-  <title>The Flatland Project</title>
-</head>
-<body>
-<h1>Flatland</h1>
-<h2>What is The Flatland Project?</h2>
-<p>In 1884, Edwin Abbott published "Flatland: A Romance of Many Dimensions."<br>
-The Flatland Project is an attempt
-to make a working computer model of Abbott's two-dimensional world.</p>
+    <head>
+        <title>The Flatland Project</title>
+    </head>
+    <body>
+        <h1>Flatland</h1>
+        <h2>What is The Flatland Project?</h2>
+        <p>
+            In 1884, Edwin Abbott published "Flatland: A Romance of Many Dimensions."<br />
+            The Flatland Project is an attempt to make a working computer model of Abbott's
+            two-dimensional world.
+        </p>
 
-<p>Learn more about the project by reading the <a href="FlatlandOutline.htm">outline</a></p>
+        <p>Learn more about the project by reading the <a href="FlatlandOutline.htm">outline</a></p>
 
-<br>
-<p>Click the button to load the Java application:</p>
-<applet code="FlatlandApplet.class"
-	width="300" height="100" align="center">
-	Your browser does not support Java applets, so
-	you can not see this applet operate.
-</applet>
+        <br />
+        <p>Click the button to load the Java application:</p>
+        <applet code="FlatlandApplet.class" width="300" height="100" align="center">
+            Your browser does not support Java applets, so you can not see this applet operate.
+        </applet>
 
-<br><br>
-The author, Duane Johnson, is a student at Brigham Young University, Utah.  He can be contacted at <a href="mailto:duanejohnson@byu.edu">duanejohnson@byu.edu</a>.
-</body>
+        <br /><br />
+        The author, Duane Johnson, is a student at Brigham Young University, Utah. He can be
+        contacted at <a href="mailto:duanejohnson@byu.edu">duanejohnson@byu.edu</a>.
+    </body>
 </html>
